syntax = "proto3";

service PriceFeed {
  rpc GetPrice(PriceQuery) returns (PriceResponse) {}
  rpc ListCurrencies(ListCurrenciesQuery) returns (ListCurrenciesResponse) {}
}

message PriceResponse {
  float price = 1;
}

message PriceQuery {
  string currency = 1;
}

message ListCurrenciesQuery { }

message ListCurrenciesResponse {
  repeated string currencies = 1;
}
